# JBRenderer

./: CMakeLists.txt  README.md
src/: Main.cpp  app.cpp  app.hpp  stdafx.h
src/core/: window.cpp  window.hpp
src/renderer/: command_manager.cpp  command_manager.hpp  framebuffer.cpp  framebuffer.hpp  pipeline.cpp  pipeline.hpp  render_pass.cpp  render_pass.hpp  renderer.cpp  renderer.hpp  shader_module.cpp  shader_module.hpp  swap_chain.cpp  swap_chain.hpp  synchronization.cpp  synchronization.hpp  vulkan_context.cpp  vulkan_context.hpp
src/scene/: camera.cpp  camera.hpp
